--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chart.js": "^2.7.3",
     "chartist": "^0.11.0",
     "core-js": "^2.5.7",
+    "file-saver": "^2.0.2",
     "jquery": "^3.3.1",
     "ng-chartist": "^1.1.1",
     "ng-chartjs": "0.0.7",
@@ -41,6 +42,7 @@
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "webpack-bundle-analyzer": "^3.0.3",
+    "xlsx": "^0.15.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
