--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng-chartist": "^1.1.1",
     "ng-chartjs": "0.0.7",
     "ng-zorro-antd": "^8.0.3",
+    "ng2-search-filter": "^0.5.1",
     "ngx-highlightjs": "^2.1.1",
     "ngx-infinite-scroll": "^6.0.1",
     "ngx-perfect-scrollbar": "^7.2.1",
